# groundStation

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  heykurt.py  installConda.sh  package-lock.json  pyproject.toml  serialTest.py
.github/workflows/: deploy.yml  release.yml  superlinter.yml
app/: display.py  fileWriter.py  login.py  main.py  numpad.py  test.py
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.mts
docs/about/: about.md
docs/developer-reference/: dev-landing.md  install-on-other-systems.md
docs/user-guide/: env.md  install-on-other-systems.md  installation.md  setup.md  user-landing.md
os/: go.mod
os-files/: airData.service  airData.sh  gsHelper.service  gsHelper.sh
os/cmd/: main.go
os/commands/: commands.go
src/app/: __main__.py
src/flightctl/: FileWriter.py  MainWindow.py  SerialCommunicator.py  Views.py  __init__.py  __main__.py
src/groundStation/: DataDisplay.py  LoginWindow.py  MainWindow.py  Numpad.py  SerialCommunicator.py  Views.py  __init__.py  __main__.py  heykurt.py  threadingTest.py
tests/: RocketSimulator.py  refreshWindowBackground.py  refreshWindowTitle.py  test_MainWindow.py  test_fileWriter.py  test_numpad.py  test_serialLogic.py
tests/benchmarks/: refreshWindowBackground.py  refreshWindowTitle.py
zPyQt/: app.py  complexSignal.py  connectWidgets.py  mousePress.py  signalApp.py  starterApp.py
