[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "groundStation"
version = "0.1.0"
dependencies = ["python-dotenv", "pyserial"]
authors = [{ name = "Nathan Samuell", email = "nathansamuell@duck.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 2 - Pre-Alpha",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
aiaa_logo = ["cropped-aiaaweblogo-2.png"]

[project.urls]
Homepage = "https://nathansamuell.github.io/groundStation/"
Issues = "https://github.com/nathansamuell/groundStation/issues"
